HDFVIEW-259/260 - fix enum handling and committed types
Update swt files
Remove excessive log.trace messages
Update object tests
add debug targets to build
Update and test platform jpackage

Former-commit-id: 98fad641e8f9c2370744ecfa1b7c16b1a39e50e0